--- a/style.css
+++ b/style.css
@@ -1,3 +1,47 @@
+/* NAVBAR */
+.navbar {
+  position: fixed;
+  top: 0;
+  width: 100%;
+  background: rgba(5, 5, 5, 0.8);
+  backdrop-filter: blur(15px);
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 15px 50px;
+  z-index: 1000;
+}
+
+.navbar .logo {
+  color: #6fffe9;
+  font-size: 20px;
+  font-weight: 600;
+}
+
+.navbar ul {
+  list-style: none;
+  display: flex;
+}
+
+.navbar ul li {
+  margin-left: 25px;
+}
+
+.navbar ul li a {
+  color: white;
+  text-decoration: none;
+  font-size: 15px;
+  transition: 0.3s;
+}
+
+.navbar ul li a:hover {
+  color: #6fffe9;
+}
+
+/* PUSH CONTENT BELOW NAVBAR */
+body {
+  padding-top: 80px;
+}
 * {
   margin: 0;
   padding: 0;
@@ -105,4 +149,5 @@ footer {
   text-align: center;
   padding: 30px;
   opacity: 0.6;
+
 }
