--- a/style.css
+++ b/style.css
@@ -106,3 +106,52 @@ footer {
   padding: 30px;
   opacity: 0.6;
 }
+/* NAVBAR */
+
+.navbar {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+
+  padding: 15px 12%;
+  background: rgba(5, 5, 5, 0.85);
+  backdrop-filter: blur(10px);
+
+  z-index: 1000;
+}
+
+/* Logo */
+.logo {
+  font-size: 22px;
+  font-weight: 600;
+  color: #6fffe9;
+}
+
+/* Links */
+.nav-links {
+  list-style: none;
+  display: flex;
+  gap: 25px;
+}
+
+.nav-links a {
+  text-decoration: none;
+  color: white;
+  font-size: 15px;
+  transition: 0.3s;
+}
+
+.nav-links a:hover {
+  color: #6fffe9;
+}
+
+/* Space for navbar */
+body {
+  padding-top: 70px;
+}
+
